# Semantic-Segmentation-of-Satellite-Imagery

./: README.md  pyproject.toml
docs/: baseline-performance.md  hyperparameter-optimization.md  knowledge-distillation.md
src/: 10_best_segmented_images.py  228_training_aerial_imagery.py  compress.py  main.py  model.py  simple_multi_unet_model.py
