[tool.poetry]
name = "semantic-segmentation-of-satellite-imagery"
version = "0.1.0"
description = ""
authors = ["Ebram Mekhail <ebrammekhail@gmail.com>"]
readme = "README.md"
packages = [{include = "semantic_segmentation_of_satellite_imagery"}]

[tool.poetry.dependencies]
python = "^3.9.12"
opencv-python = "^4.6.0.66"
matplotlib = "^3.6.1"
patchify = "^0.2.3"
tensorflow-macos = "^2.10.0"
tensorflow-metal = "^0.6.0"
segmentation-models = "^1.0.1"
scikit-learn = "^1.1.3"
nni = "^2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
